# GMTK2024-1

./: Conan_install_dependencies.bat  README.md
PraiseTheOmnissiah/: CMakeLists.txt
PraiseTheOmnissiah/Source/: CMakeLists.txt
Source/: Main.cpp
TestingProject/: CMakeLists.txt  conanfile.py
TestingProject/Source/: CMakeLists.txt  Character.cpp  Character.hpp  Collisions.hpp  Context_factory.cpp  Engine.hpp  Environment_manager.hpp  Environment_manager_interface.hpp  Lobby_frontend_manager.cpp  Main.cpp  Main_gameplay_manager.cpp  Main_gameplay_manager.hpp  Main_gameplay_manager_interface.hpp  Main_menu_manager.cpp  Main_menu_manager.hpp
TestingProject/Source/assets/: main_menu.rml
